tests/ui/duplicate_pymodule_submodule.stderr
error: `submodule` may only be specified once (it is implicitly always specified for nested modules)
 --> tests/ui/duplicate_pymodule_submodule.rs:4:2
  |
4 |     mod submod {}
  |     ^^^
